raw/regex-0.1.80@010-baseline--2017-01-26-23-58-18--5.log
commit 025fb7de09dfcf5fbc19c5d1b6bed168ac987e6c
Merge: 23a9469 e1280d8
Author: bors <bors@rust-lang.org>
Date:   Fri Jan 27 04:57:12 2017 +0000

    Auto merge of #39139 - estebank:issue-38147, r=nikomatsakis
    
    Point to immutable arg/fields when trying to use as &mut
    
    Present the following output when trying to access an immutable borrow's
    field as mutable:
    
    ```
    error[E0389]: cannot borrow data mutably in a `&` reference
      --> $DIR/issue-38147-1.rs:27:9
       |
    26 | fn f(&self) {
       |      -----  use `&mut self` here to make mutable
    27 |     f.s.push('x');
       |     ^^^ assignment into an immutable reference
    ```
    
    And the following when trying to access an immutable struct field as mutable:
    
    ```
    error: cannot borrow immutable borrowed content `*self.s` as mutable
      --> $DIR/issue-38147-3.rs:17:9
       |
    12 |     s: &'a String
       |     ------------- use `&'a mut String` here to make mutable
    ...|
    16 |     fn f(&self) {
       |          -----  use `&mut self` here to make mutable
    17 |         self.s.push('x');
       |         ^^^^^^ cannot borrow as mutable
    ```
    
    Fixes #38147.
rustc 1.15.0-nightly (daf8c1dfc 2016-12-05)
-rwxr-xr-x 1 root root 9432 Dec  6 15:39 /usr/local/bin/rustc
rustc: ./regex-0.1.80@010-baseline
cargo rustc  -- -Ztime-passes -Zinput-stats
makefile:9: recipe for target 'all@010-baseline' failed
done
